compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_constructor_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type MyType { Int_Value(Int) }"
---
----- SOURCE CODE
type MyType { Int_Value(Int) }

----- ERROR
error: Invalid type variant name
  ┌─ /src/one/two.gleam:1:15
  │
1 │ type MyType { Int_Value(Int) }
  │               ^^^^^^^^^ This is not a valid type variant name

Hint: Type variant names start with an uppercase letter and contain only
lowercase letters, numbers, and uppercase letters.
Try: IntValue
